package com.example.androidximalayafm;

import androidx.fragment.app.FragmentActivity;

/**
 * BaseActivity
 *
 * @author zhangfan
 * @email zhangfan.makesail@bytedance.com
 * @date 2020/8/1 11:20 AM
 * @since 1.0.0
 * <p>
 * Description:
 */
public class BaseActivity extends FragmentActivity {

}
