package com.example.androidximalayafm.utils;

public class Constants {
    // 获取推荐列表的专辑数量
    public static int COUNT_RECOMMEND = 50;


    // 默认列表请求数量
    public static int COUNT_DEFAULT = 50;
}
